@startuml

hide circle
skinparam classAttributeIconSize 0

class Executor
class Scanner

package parser {
    class Parser
}

package command {
    class Command
    class CommandResult
}

package data {
    class InputOutputManager
    class StateManager
}

package ui {
    class TextUi {
        Scanner in
    }
}

Ravi ..> ui
Ravi ..> Executor

Executor ...> data
Executor ..> command
Executor .> parser
parser ...> command

TextUi "1" *-- Scanner

@enduml